--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming Foundations CA</title>
-
-    <script defer src="/js/example.js"></script>
-    <link href='/css/style.css' rel='stylesheet' />
-
-    <link rel='icon' href='data:;base64,=' />
+    <title>Programming Foundations Module 1 Lesson 1</title>
 </head>
-
 <body>
-    <h1>Programming Foundations CA</h1>
+    <h1>Programming Foundations Module 1 Lesson 1</h1>
+    <script src="js/script1.js"></script>
+    <script src="js/script2.js"></script>
 </body>
-
 </html>
