--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming Foundations Module 1 Lesson 1</title>
+    <title>Programming Foundations CA</title>
 </head>
 <body>
-    <h1>Programming Foundations Module 1 Lesson 1</h1>
-    <script src="js/script1.js"></script>
-    <script src="js/script2.js"></script>
+
+    <script src="js/dog.js"></script>
 </body>
 </html>
