--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Programming Foundations CA</title>
 </head>
 <body>
-        <h1>Dio the dog</h1>
+    <header>
+        <h1>Dio the Dog</h1>
+    </header>
+
+    <main>
         <img src="images/diosunset.JPG" alt="">
         <h2>Breed: <span id="breedInfo"></span></h2>
         <h3>Hobbies:</h3>
@@ -23,7 +27,8 @@
         <button onclick="showTrick('find man')">Find man</button>
         
         <img id="trickImage" src="" alt="Dio's trick" style="display:none;">
-
+    </main>
+    
   <script src="/js/dog.js"></script>
 </body>
 </html>
