Added function for all tricks and an image

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <button onclick="showTrick('find man')">Find man</button>
         
         <img id="trickImage" src="" alt="Dio's trick" style="display:none;">
+
+        <h3>The working unit</h3>
+        <h4>Dio and it's owner at work, searching for missing persons</h4>
+        <button onclick="showDirection()">Show unit</button>
+        <img id="Direction" src="/images/direction.JPG" alt="Dio and owner at work" style="display:none;">
     </main>
-    
+
   <script src="/js/dog.js"></script>
 </body>
 </html>
